# merfish_tools

./: .readthedocs.yml  README.md  barcodes.py  cellgene.py  config.json  config.py  daxfile.py  experiment.py  fileio.py  images.py  plotting.py  pyproject.toml  requirements.txt  run.py  segmentation.py  stats.py  util.py
docs/: api.rst  conf.py  glossary.rst  index.rst  requirements.txt
docs/notebooks/: analyze_merscope_experiment.ipynb  cell_segmentation.ipynb  find_marker_genes.ipynb
docs/source/: mftools.rst  modules.rst
mftools/: __init__.py  barcodes.py  cellgene.py  config.py  fileio.py  images.py  plotting.py  segmentation.py  stats.py  util.py
scripts/: archive_directory.sh  design_codebook.py  find_marker_genes.py  generate_data_organization.py  get_average_umi.ipynb  merscope_data_worker.py  verify_data_folder.py
